<resources>
    <string name="app_name">bluearchitecture</string>

    <!--************************************************************ OfflineData Flow ****************************************************-->
    <!--Main RD Activity-->
    <string
        name="app_loading"
        translatable="false"
    >Your content is on its way, just a moment...</string>

    <string
        name="mainORActivity_btnDataBaseRoomData"
        translatable="false"
    >DataBase Room Flow</string>
    <string
        name="mainORActivity_btnPreferenceDataStore"
        translatable="false"
    >Preference Data Store Flow</string>
    <string
        name="basicRDFirstFragment_btnFireApi"
        translatable="false"
    >Fire Basic API</string>
    <string
        name="basicRDFirstFragment_btnNavigateToSecondFragment"
        translatable="false"
    >Navigate To Second Fragment</string>
    <string
        name="basicRDFirstFragment_btnInsertData"
        translatable="false"
    >Insert Data API</string>
    <string
        name="basicRDFirstFragment_btnInsertDataStore"
        translatable="false"
    >Insert Proto Data Store</string>
    <string
        name="basicRDFirstFragment_btnGetData"
        translatable="false"
    >Get All Login Data List</string>
    <string
        name="basicRDFirstFragment_btnGetProtoDataStore"
        translatable="false"
    >Get All Data Has Been Saved</string>

    <string
        name="basicORFirstFragment_tvScreenTitle"
        translatable="false"
    >First Fragment - Basic Offline Data</string>
    <string
        name="basicORSecondFragment_tvScreenTitle"
        translatable="false"
    >Second Fragment - Basic Offline Data</string>

    <!--First Fragment-->
    <string
        name="firstFragment_loginFailed"
        translatable="false"
    >Login Failed</string>
    <string
        name="firstFragment_userIdFailed"
        translatable="false"
    >User ID</string>
    <string
        name="firstFragment_userIdHelperText"
        translatable="false"
    >Ex: 12345</string>

    <string
        name="firstFragment_userNameFailed"
        translatable="false"
    >User Name</string>
    <string
        name="firstFragment_userNameHelperText"
        translatable="false"
    >Ex:Ahmed Samir</string>
    <string
        name="firstFragment_noData"
        translatable="false"
    >Enter your Data</string>
    <string
        name="firstFragment_noDataFound"
        translatable="false"
    >No Data Found</string>


    <string
        name="basicRDSecondFragment_btnFireApiParallel"
        translatable="false"
    >Fire two APIs parallel</string>

    <string name="app_error_invalid_data_received" translatable="false">
    The server returned data in an unexpected format. Please try again later.
    </string>
    <!--******************************************************************************************************************************-->
</resources>
